--- a/TP2/GameOfLife/pom.xml
+++ b/TP2/GameOfLife/pom.xml
@@ -32,9 +32,18 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.13.0</version>
         <configuration>
-          <source>10</source>
-          <target>10</target>
+          <source>21</source>
+          <target>21</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>3.4.1</version>
+        <configuration>
+          <mainClass>ar.edu.itba.ss.App</mainClass>
         </configuration>
       </plugin>
     </plugins>
